<resources>
    <string name="app_name">Boardy</string>
    <string name="title_herorealms">Hero Realms</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="main">Main</string>
    <string name="email">Email</string>
    <string name="email_mandatory">Email*</string>
    <string name="password">Password</string>
    <string name="password_mandatory">Password*</string>
    <string name="confirm_password_mandatory">Confirm Password*</string>
    <string name="user_name_optional">Username (optional)</string>
    <string name="first_name_optional">First Name (optional)</string>
    <string name="last_name_optional">Last Name (optional)</string>
    <string name="scanning_code">Scanning code</string>
    <string name="not_available">N/A</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="got_it">Got it</string>
    <string name="psst">Pssst…</string>
    <string name="yay">Yay!</string>
    <string name="bad_news">Bad news</string>
    <string name="are_you_sure">You sure?</string>
    <string name="about_to_kick_out_player">You are about to kick out %s</string>
    <string name="you_were_kicked_out_game_session">You are no longer in this game session</string>
    <string name="you_are_about_to_leave_game_session_admin">You are the admin of the current game session and you are about to leave it. This will end the game session.</string>
    <string name="you_are_about_to_leave_game_session_player">You are about to leave this game session</string>
    <string name="game_session_suspended_admin">Congrats! The game session is suspended and you screw your mates! Happy now?</string>
    <string name="game_session_suspended_player">Uumm… Sorry but the game session was cold-heartedly suspended by the admin!</string>
    <string name="you_are_a_winner">You are a winner</string>
    <string name="you_are_a_loser">You are a loser</string>

    <!-- ERROR MESSAGES -->
    <string name="something_went_wrong">Someting went wrong. Please, try again!</string>
    <string name="wrong_credentials">Wrong username or password</string>
    <string name="empty_email">Email must not be empty</string>
    <string name="empty_password">Password must not be empty</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="wrong_password_format">The password must be at least 8 characters long</string>
    <string name="empty_confirm_password">Confirm password must not be empty</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="weak_password">Your password is too weak</string>
    <string name="email_is_already_in_use">The email is already in use</string>
    <string name="qr_scanning_failed">Scanning failed. Please, try again!</string>
    <string name="data_could_not_be_updated_error">Data could not be updated</string>
    <string name="data_could_not_be_loaded_error">Data could not be loaded</string>
    <string name="can_not_create_game_session_error">Game session can not be created</string>
    <string name="qr_code_can_not_be_created_error">QR code can not be created</string>
    <string name="add_current_player_to_game_session_error">Can not add current player to game session</string>
</resources>